<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uploadLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/TextLayout"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/browseToUploadMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadmapfile" />

    <Button
        android:id="@+id/browseToUploadGfx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadgfxfile" />
    
    <Button
        android:id="@+id/browseToUploadConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadconfigfile" />

    <LinearLayout
        android:id="@+id/TextLayout"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/browseToRouteMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RouteMap" />

</LinearLayout>